correct navbar dark mode

--- a/my_portofolio/src/styles/darkTheme.css
+++ b/my_portofolio/src/styles/darkTheme.css
@@ -8,7 +8,7 @@
 }
 /* Header Section */
 .dark-theme .header {
-  --backgroud-color: hsla(252, 50%, 4%, 0.4);
+  --background-color: hsla(252, 50%, 4%, 0.4);
   backdrop-filter: blur(5px); /* Flou de 5px */
   -webkit-backdrop-filter: blur(5px);
   transition: backdrop-filter 0.3s ease, -webkit-backdrop-filter 0.3s ease,
@@ -73,11 +73,10 @@
 }
 
 .dark-theme .nav-item-link {
-  --background-color: hsl(252, 50%, 4%);
-  --icon-color: hsl(255, 46%, 95%);
-  background-color: var(--backgroud-color);
+  --background-color: var(--background-color);
+  --icon-color: var(--text-color);
+  background-color: var(--background-color);
   color: var(--icon-color);
-  border: none;
   border-radius: 8rem;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
